<resources>
    <string name="app_name">DaHora</string>
    <string name="password">Senha</string>
    <string name="error">Erro</string>
    <string name="login">Entrar</string>
    <string name="email">E-mail</string>
    <string name="title_activity_home_studant">home_studant</string>
    <string name="title_activity_login_activity">login_activity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="col1">Name</string>
    <string name="col2">Age</string>
    <string name="col3">Surname</string>
    <string name="row1Name">Ali</string>
    <string name="row1Age">51</string>
    <string name="row1Surname">Mohammad</string>
    <string name="row2Name">Dave</string>
    <string name="row2Age">45</string>
    <string name="row2Surname">Smith</string>
    <string name="row3Name">Jason</string>
    <string name="row3Age">67</string>
    <string name="row3Surname">William</string>
    <string name="atualizar">Atualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Início</string>
    <string name="requirement">Requerimento</string>
    <string name="historic">Histórico</string>
    <string name="create_requirement">Criar Requerimento</string>
    <string name="tittle_requisition">Titulo da Atividade</string>
    <string name="date_held">Data de Realização</string>
    <string name="work_load">Garga horaria</string>
    <string name="name_institution">Nome da Intituição</string>
    <string name="comments">Observações...</string>
    <string name="attach_file">Anexar Arquivo</string>
    <string name="send">Enviar</string>
    <string name="carregando">Carregando...</string>
</resources>