<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="604dp"
        android:background="@android:color/white">

        <!-- Table Heading -->

        <TableRow android:background="@color/colorGreen">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


        </TableRow>

        <!-- Table Data -->

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1Name"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1Age"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1Surname"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Name"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Age"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Surname"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Name"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Age"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Surname"
                android:textSize="12sp" />

        </TableRow>

    </TableLayout>

</RelativeLayout>