<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequirementHistoryStudent">


    <Button
        android:id="@+id/att"
        android:layout_width="290dp"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:text="@string/atualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="341dp"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Table Heading -->

        <TableRow android:background="@color/colorGreen">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


        </TableRow>

        <!-- Table Data -->

        <TableRow>

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text=""
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Name"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Age"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Surname"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Name"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Age"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Surname"
                android:textSize="12sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>