<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_ib"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/ic_logo_png"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/logo_ib"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:layout_editor_absoluteX="29dp" />

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/error"
        android:textAlignment="center"
        android:textColor="@color/red_error"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:visibility="visible" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_tv"
        app:layout_constraintVertical_bias="0.6"
        tools:layout_editor_absoluteX="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>